fix(responsiveness): restaurant card title overflow

--- a/src/components/RestaurantCard/index.module.scss
+++ b/src/components/RestaurantCard/index.module.scss
@@ -38,6 +38,7 @@
   &__title {
     font-size: 1rem;
     width: 100%;
+    max-width: 200px;
     font-weight: 500;
     text-align: left;
     overflow: hidden;
@@ -75,6 +76,18 @@
     }
   }
 
+  @media screen and (min-width: $breakpoint-sm) {
+    &__title {
+      max-width: 400px;
+    } 
+  }
+
+  @media screen and (min-width: $breakpoint-md) {
+    &__title {
+      max-width: 600px;
+    }
+  }
+
   @media screen and (min-width: $breakpoint-lg) {
     margin-bottom: 1rem;
     position: relative;
@@ -98,6 +111,7 @@
       margin: 0 auto;
       text-align: center;
       font-size: 1.25rem;
+      max-width: 100%;
     }
 
     &__divider {
